<resources>
    <string name="app_name">SIP</string>
    <string name="Logo">LOGO</string>
    <string name="UserInfor">User Info</string>
    <string name="sip_ip">SIP IP</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="enter_your_domain_ip">Enter your Domain IP</string>
    <string name="your_number">Your Number</string>
    <string name="password">Password</string>
    <string name="clear">Clear</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_0">0</string>
    <string name="star">*</string>
    <string name="hashag">#</string>
    <string name="_3">3</string>
    <string name="x">X</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="calling">Calling</string>
    <string name="_1001">1001</string>
    <string name="iv">Image</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
